cmake_minimum_required(VERSION 3.23)
project(data_analysis_and_structure_2_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(data_analysis_and_structure_2_2 main.cpp
        Lab1_NaturalMerge4/NaturalMerge4.cpp
        Lab1_NaturalMerge4/NaturalMerge4.h
        Lab2_BinaryTree/BinaryTree.cpp
        Lab2_BinaryTree/BinaryTree.h
        Lab2_BinaryTree/BinaryTreeTester.cpp
        Lab2_BinaryTree/BinaryTreeTester.h)
